--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <option value="" disabled selected>Cargo:</option>
             <option value="Líder">Líder</option>
             <option value="Vice-Líder">Vice-Líder</option>
-            <option value="Analista">Analista</option>
+            <option value="Orientador">Orientador</option>
           </select>
           <button type="submit">Enviar</button>
         </form>
@@ -536,13 +536,13 @@
               <option value="" disabled selected>Cargo atual:</option>
             <option value="Líder">Líder</option>
             <option value="Vice-Líder">Vice-Líder</option>
-            <option value="Analista">Analista</option>
+            <option value="Orientador">Orientador</option>
             </select>
             <select required>
               <option value="" disabled selected>Cargo a ser promovido:</option>
             <option value="Líder">Líder</option>
             <option value="Vice-Líder">Vice-Líder</option>
-            <option value="Analista">Analista</option>
+            <option value="Orientador">Orientador</option>
             </select>
           </div>
           <input type="date" placeholder="Data:" required />
@@ -558,12 +558,12 @@
               <option value="" disabled selected>Cargo atual:</option>
             <option value="Líder">Líder</option>
             <option value="Vice-Líder">Vice-Líder</option>
-            <option value="Analista">Analista</option>
+            <option value="Orientador">Orientador</option>
             </select>
             <select required>
               <option value="" disabled selected>Cargo a ser rebaixado:</option>
               <option value="Vice-Líder">Vice-Líder</option>
-              <option value="Analista">Analista</option>
+              <option value="Orientador">Orientador</option>
             </select>
           </div>
           <input type="date" placeholder="Data:" required />
@@ -578,7 +578,7 @@
             <option value="" disabled selected>Cargo:</option>
             <option value="Líder">Líder</option>
             <option value="Vice-Líder">Vice-Líder</option>
-            <option value="Analista">Analista</option>
+            <option value="Orientador">Orientador</option>
           </select>
           <input type="date" placeholder="Data:" required />
           <input type="text" placeholder="Permissão:" required />
@@ -624,7 +624,7 @@
             <option value="" disabled selected>Cargo:</option>
             <option value="Líder">Líder</option>
             <option value="Vice-Líder">Vice-Líder</option>
-            <option value="Analista">Analista</option>
+            <option value="Orientador">Orientador</option>
           </select>
           <input type="text" placeholder="Nickname antigo:" required />
           <input type="text" placeholder="Nickname novo:" required />
